--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "src/index.html",
   "scripts": {
     "test": "karma start",
+    "envify": "envify src/app/main.js > src/dist/main.js",
     "server": "browser-sync start --config bs-config.js",
     "styles": "node-sass -w -r --include-path --source-map-embed -o ./src/style ./src/scss/main.scss",
     "wiredep": "wiredep -s src/index.html",
-    "start": "concurrently \"npm run styles\" \"npm run server\""
+    "scripts": "babel --presets es2015 --plugins transform-inline-environment-variables ./src/app --watch --out-dir ./src/dist -s",
+    "start": "concurrently \"npm run styles\" \"npm run scripts\" \"npm run server\""
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,9 @@
   },
   "homepage": "https://github.com/teone/fe-automation",
   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-plugin-transform-inline-environment-variables": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "browser-sync": "^2.11.1",
     "concurrently": "^2.0.0",
     "node-sass": "^3.4.2",
